# api/routes/router_user.js
@@ -5,6 +5,9 @@ const authenticateToken = require('../middlewares/auth');
 // Rota para criar um novo usuário (apenas para exemplo, geralmente o registro seria separado)
 router.post('/', userController.createUser);
 
+// Rota para fazer login
+router.post('/login', userController.entrar);
+
 // Rota para obter todos os usuários (protegida)
 router.get('/', authenticateToken, userController.getAllUsers);
 
