# api/swagger.yaml
@@ -1,17 +1,21 @@
 openapi: 3.0.0
 info:
-<<<<<<< HEAD
   title: API de Cadastro de Usuários
   version: 1.0
+  description: Documentação da API que gerencia serviços de festas
 tags:
   - name: usuário
     description: Endpoints relacionados aos usuários
+  - name: serviço
+    description: Endpoints relacionados aos serviços de festas
 paths:
   /user:
     get:
       tags:
         - usuário
       summary: Lista todos os usuários
+      security:
+        - JWTAuth: []
       responses:
         '200':
           description: OK
@@ -19,25 +23,16 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ArrayOfUser'
+          
     post:
       tags:
         - usuário
       summary: Cria um novo usuário
-=======
-  title: Documentação da API de Serviços de Festa
-  description: Documentação da API que gerencia serviços de festas
-  version: 1.0.0
-paths:
-  /api/services:
-    post:
-      summary: Criar um novo serviço de festa
->>>>>>> a9bfd14f49795b4dd1f1a8492754bac0f852736b
       requestBody:
         required: true
         content:
           application/json:
             schema:
-<<<<<<< HEAD
               $ref: '#/components/schemas/User'
       responses:
         '201':
@@ -52,6 +47,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Mensagem'
+
   /user/{id}:
     get:
       tags:
@@ -64,6 +60,8 @@ paths:
           description: ID do usuário a ser obtido
           schema:
             type: string
+      security:
+        - JWTAuth: []
       responses:
         '200':
           description: OK
@@ -87,66 +85,94 @@ paths:
       tags:
         - usuário
       summary: Atualiza um usuário pelo ID
-=======
-              type: object
-              properties:
-                festa:
-                  type: string
-                  description: Nome do serviço
-                  example: Serviço de Teste
-                descricao:
-                  type: string
-                  description: Descrição do serviço
-                  example: Este é um serviço de teste
-                preco:
-                  type: number
-                  description: Preço do serviço
-                  example: 100.00
-                imagem:
-                  type: string
-                  description: URL da imagem do serviço
-                  example: https://exemplo.com/imagem.jpg
-      responses:
-        '201':
-          description: Serviço criado com sucesso
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  response:
-                    $ref: '#/components/schemas/Servico'
-                  msg:
-                    type: string
-                    example: Serviço criado com sucesso!
-    get:
-      summary: Obter todos os serviços
-      responses:
-        '200':
-          description: Lista de serviços obtida com sucesso
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Servico'
-  /api/services/{id}:
-    get:
-      summary: Obter um serviço pelo ID
->>>>>>> a9bfd14f49795b4dd1f1a8492754bac0f852736b
       parameters:
         - in: path
           name: id
           required: true
-<<<<<<< HEAD
           description: ID do usuário a ser atualizado
           schema:
             type: string
-=======
+      security:
+        - JWTAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+    delete:
+      tags:
+        - usuário
+      summary: Exclui um usuário pelo ID
+      parameters:
+        - in: path
+          name: id
+          required: true
+          description: ID do usuário a ser excluído
+          schema:
+            type: string
+      security:
+        - JWTAuth: []
+      responses:
+        '204':
+          description: No Content
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+
+  /api/services:
+    post:
+      tags:
+        - serviço
+      summary: Criar um novo serviço de festa
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Servico'
+      responses:
+        '201':
+          description: Created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Servico'
+        '422':
+          description: Unprocessable Entity
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+
+  /api/services/{id}:
+    get:
+      tags:
+        - serviço
+      summary: Obter um serviço pelo ID
+      parameters:
+        - in: path
+          name: id
+          required: true
           description: ID do serviço a ser obtido
           schema:
             type: string
-          example: 60d6c2960c4ef00015ee150d
       responses:
         '200':
           description: Serviço obtido com sucesso
@@ -159,12 +185,10 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  msg:
-                    type: string
-                    example: Serviço não encontrado
+                $ref: '#/components/schemas/Mensagem'
     delete:
+      tags:
+        - serviço
       summary: Excluir um serviço pelo ID
       parameters:
         - in: path
@@ -173,81 +197,57 @@ paths:
           description: ID do serviço a ser excluído
           schema:
             type: string
-          example: 60d6c2960c4ef00015ee150d
       responses:
         '200':
           description: Serviço excluído com sucesso
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  deleteService:
-                    $ref: '#/components/schemas/Servico'
-                  msg:
-                    type: string
-                    example: Serviço excluído com sucesso
+                $ref: '#/components/schemas/Mensagem'
         '404':
           description: Serviço não encontrado
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  msg:
-                    type: string
-                    example: Serviço não encontrado
-    put:
-      summary: Atualizar um serviço pelo ID
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: ID do serviço a ser atualizado
-          schema:
-            type: string
-          example: 60d6c2960c4ef00015ee150d
->>>>>>> a9bfd14f49795b4dd1f1a8492754bac0f852736b
+                $ref: '#/components/schemas/Mensagem'
+
+  /user/login:
+    post:
+      tags:
+        - Autenticação
+      summary: Faz login do usuário e retorna um token JWT
       requestBody:
         required: true
         content:
           application/json:
             schema:
-<<<<<<< HEAD
-              $ref: '#/components/schemas/User'
+              type: object
+              
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
       responses:
         '200':
-          description: OK
+          description: Token gerado com sucesso
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
-        '404':
-          description: Not Found
+                type: object
+                properties:
+                  token:
+                    type: string
+        '401':
+          description: Credenciais inválidas
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Mensagem'
-    delete:
-      tags:
-        - usuário
-      summary: Exclui um usuário pelo ID
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: ID do usuário a ser excluído
-          schema:
-            type: string
-      responses:
-        '204':
-          description: No Content
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Mensagem'
+                type: object
+                properties:
+                  msg:
+                    type: string
+
 components:
   schemas:
     ArrayOfUser:
@@ -269,190 +269,15 @@ components:
       properties:
         msg:
           type: string
-=======
-              $ref: '#/components/schemas/Servico'
-      responses:
-        '200':
-          description: Serviço atualizado com sucesso
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Servico'
-        '404':
-          description: Serviço não encontrado
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  msg:
-                    type: string
-                    example: Serviço não encontrado
-components:
-  schemas:
     Servico:
       type: object
       properties:
-        _id:
-          type: string
-          description: ID do serviço
-        festa:
-          type: string
-          description: Nome do serviço
-        descricao:
-          type: string
-          description: Descrição do serviço
-        preco:
-          type: number
-          description: Preço do serviço
-        imagem:
-          type: string
-          description: URL da imagem do serviço
->>>>>>> a9bfd14f49795b4dd1f1a8492754bac0f852736b
-
-
-openapi: 3.0.0
-info:
-  title: API de Cadastro de Usuários
-  version: 1.0
-tags:
-  - name: usuário
-    description: Endpoints relacionados aos usuários
-paths:
-  /user:
-    get:
-      tags:
-        - usuário
-      summary: Lista todos os usuários
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ArrayOfUser'
-    post:
-      tags:
-        - usuário
-      summary: Cria um novo usuário
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-      responses:
-        '201':
-          description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '422':
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Mensagem'
-  /user/{id}:
-    get:
-      tags:
-        - usuário
-      summary: Obtém um usuário pelo ID
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: ID do usuário a ser obtido
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Mensagem'
-        '422':
-          description: Unprocessable Entity
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Mensagem'
-    put:
-      tags:
-        - usuário
-      summary: Atualiza um usuário pelo ID
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: ID do usuário a ser atualizado
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Mensagem'
-    delete:
-      tags:
-        - usuário
-      summary: Exclui um usuário pelo ID
-      parameters:
-        - in: path
-          name: id
-          required: true
-          description: ID do usuário a ser excluído
-          schema:
-            type: string
-      responses:
-        '204':
-          description: No Content
-        '404':
-          description: Not Found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Mensagem'
-components:
-  schemas:
-    ArrayOfUser:
-      type: array
-      items:
-        $ref: '#/components/schemas/User'
-    User:
-      type: object
-      properties:
         name:
           type: string
-        email:
+        description:
           type: string
-          format: email
-        password:
-          type: string
-    Mensagem:
-      type: object
-      properties:
-        msg:
-          type: string
+  securitySchemes:
+    JWTAuth:
+      type: apiKey
+      in: header
+      name: Authorization
